Add Internship section, Blog page, update icons and links

--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,6 @@ Thumbs.db
 *.swp
 *.swo
 
-# 
-#       cd C:\Users\danny\Desktop\Junior\profile\TidalHarley.github.io-main\TidalHarley.github.io-main
-#       git remote add origin https://github.com/TidalHarley/TidalHarley.github.io.git
-#       git push -f origin main
+# git add .
+# git commit -m "你的更新说明"
+# git push
