Enhance hero background, add Zhipu internship, redesign Beyond Research section

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,6 @@ Thumbs.db
 # git add .
 # git commit -m "你的更新说明"
 # git push
+#git config --global http.proxy 127.0.0.1:7897
+
+#git config --global https.proxy 127.0.0.1:7897
